baml_language/crates/baml_tests/snapshots/diagnostic_errors/assignment_expr_position/baml_tests__diagnostic_errors__assignment_expr_position__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
function user.assignment_in_expression_position() -> int throws never {
  { : never
    let x = 10 : 10 -> int
    let y = <missing> : never
    y : unknown
  }
  ?? 349..370: unreachable code: 1 statement(s) after diverging statement
}
