baml_language/crates/baml_tests/snapshots/diagnostic_errors/assignment_expr_position/baml_tests__diagnostic_errors__assignment_expr_position__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== COMPILER2 DIAGNOSTICS ===
  [type] E0146

  ⚠ unreachable code: 1 statement(s) after diverging statement
   ╭─[main.baml:8:5]
 8 │     let y = (x = 5);
   ·     ────────────────
   ╰────

  [hir] E0010

  × assignment is not allowed in expression position; assignment is a statement
   ╭─[main.baml:8:14]
 8 │     let y = (x = 5);
   ·              ──┬──
   ·                ╰── assignment not allowed here
   ╰────
